# openFrameworks

./: #.gitignore#  .appveyor.yml  .appveyor_msys2.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.linux.yml  .travis.yml  CHANGELOG.md  CMAKE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_FROM_GITHUB.md  INSTALL_OFRASP.md  IOS_DEV_NOTES.md  LICENSE.md  Makefile.am  PLATFORMS.md  README.md  README.rst  README_release.md  SECURITY.md  THANKS.md  _OF_PROJECTS_README.txt  addon_config.mk  changes.md  changes.txt  conanfile.py  configure.ac  install.xml  license.md  meson.build  of  ofMain.h  readme  readme.android  (+11 more)
addons/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile.am  ofAddons.h
addons/Debug Linux/: makefile  sources.mk
addons/Debug Mac OS X/: makefile
addons/Release Linux/: makefile  sources.mk
addons/ofx3DModelLoader/: install.xml  ofx3DModelLoader.cmake
addons/ofx3DModelLoader/src/: Makefile.am  ofx3DBaseLoader.h  ofx3DModelLoader.h  ofx3dModelLoader.cpp
addons/ofxAccelerometer/: CMakeLists.txt  LICENSE.txt  changelog.txt  install.xml
addons/ofxAccelerometer/src/: Makefile.am  ofxAccelerometer.cpp  ofxAccelerometer.h
addons/ofxAndroid/: CMakeLists.txt  settings.gradle
addons/ofxAndroid/ofAndroidLib/: .classpath  .project  Android.mk  AndroidManifest.xml  Application.mk  build.gradle  build.xml  default.properties  local.properties  project.properties  settings.gradle
addons/ofxAndroid/openframeworksAndroid/: Android.mk  common-functions.gradle
addons/ofxAndroid/src/: ofAppAndroidWindow.cpp  ofAppAndroidWindow.h  ofxAndroid.h  ofxAndroidAccelerometer.cpp  ofxAndroidApp.h  ofxAndroidCircBuffer.h  ofxAndroidGPS.cpp  ofxAndroidGPS.h  ofxAndroidLogChannel.cpp  ofxAndroidLogChannel.h  ofxAndroidMagenticField.cpp  ofxAndroidMagneticField.h  ofxAndroidSoundPlayer.cpp  ofxAndroidSoundPlayer.h  ofxAndroidSoundStream.cpp  ofxAndroidSoundStream.h  ofxAndroidUtils.cpp  ofxAndroidUtils.h  ofxAndroidVibrator.cpp  ofxAndroidVibrator.h  ofxAndroidVideoGrabber.cpp  ofxAndroidVideoGrabber.h  ofxAndroidVideoPlayer.cpp  ofxAndroidVideoPlayer.h  ofxGPS.h
addons/ofxAssimp/: addon_config.mk
addons/ofxAssimp/src/: ofxAssimp.h  ofxAssimpAnimation.cpp  ofxAssimpAnimation.h  ofxAssimpAnimationMixer.cpp  ofxAssimpAnimationMixer.h  ofxAssimpBone.cpp  ofxAssimpBone.h  ofxAssimpBounds.cpp  ofxAssimpBounds.h  ofxAssimpMesh.cpp  ofxAssimpMesh.h  ofxAssimpModel.cpp  ofxAssimpModel.h  ofxAssimpNode.cpp  ofxAssimpNode.h  ofxAssimpScene.cpp  ofxAssimpScene.h  ofxAssimpSkeleton.cpp  ofxAssimpSkeleton.h  ofxAssimpTexture.cpp  ofxAssimpTexture.h  ofxAssimpUtils.h
addons/ofxAssimpModelLoader/: CMakeLists.txt  addon_config.mk  install.xml
addons/ofxAssimpModelLoader/src/: ofx3DBaseLoader.h  ofxAssimpAnimation.cpp  ofxAssimpAnimation.h  ofxAssimpMeshHelper.cpp  ofxAssimpMeshHelper.h  ofxAssimpModelLoader.cpp  ofxAssimpModelLoader.cpp.orig  ofxAssimpModelLoader.h  ofxAssimpModelLoader.h.orig  ofxAssimpTexture.cpp  (+2 more)
addons/ofxCairo/: addon_config.mk
addons/ofxCv/: addon_config.mk
addons/ofxDirList/: install.xml  ofxDirList.cmake
addons/ofxEmscripten/: .cproject  .project
addons/ofxGPS/: CMakeLists.txt
addons/ofxGui/: CMakeLists.txt
addons/ofxInputField/: .gitignore  README.md
addons/ofxJSON/: README
addons/ofxKinect/: CMakeLists.txt  LICENSE.txt  README.md  addon_config.mk
addons/ofxMultiTouch/: changelog.txt  install.xml
addons/ofxNetwork/: CMakeLists.txt  install.xml  ofxNetwork.cmake
addons/ofxOpenCv/: CMakeLists.txt  addon.make  addon_config.mk  install.xml  ofxOpenCv.cmake  ofxOsc.cmake
addons/ofxOsc/: CMakeLists.txt  addon_config.mk  install.xml  ofxOsc.cmake  sampleAddonCMakeFile.cmake
addons/ofxPoco/: CMakeLists.txt  addon_config.mk
addons/ofxSvg/: CMakeLists.txt  addon_config.mk
addons/ofxSynth/: install.xml
addons/ofxThread/: install.xml
addons/ofxThreadedImageLoader/: CMakeLists.txt  install.xml
addons/ofxUnitTests/: CMakeLists.txt
addons/ofxVectorGraphics/: CMakeLists.txt  Makefile.am  install.xml
addons/ofxVectorMath/: install.xml
addons/ofxXmlSettings/: CMakeLists.txt  Makefile.am  install.xml  ofxXmlSettings.cmake
addons/ofxiPhone/: LICENSE.txt  changelog.txt  ofxiPhone.h  ofxiPhoneExtras.h  ofxiPhoneExtras.h.orig
apps/examples/: CMakeLists.txt
conan/libdom/: CMakeLists.txt  conanfile.py
conan/libparserutils/: CMakeLists.txt  conanfile.py
conan/libtess2/: CMakeLists.txt  conanfile.py
examples/: .gitignore  CMakeLists.txt  README.md
examples/3d/: CMakeLists.txt
examples/android/: .gitignore  CMakeLists.txt
examples/communication/: CMakeLists.txt
examples/computer_vision/: CMakeLists.txt
examples/doc-sprint-example-category/: README.md
examples/events/: CMakeLists.txt  README.md
examples/gl/: CMakeLists.txt
examples/gles/: CMakeLists.txt
examples/graphics/: CMakeLists.txt
examples/gui/: CMakeLists.txt
examples/input_output/: CMakeLists.txt
examples/ios/: CMakeLists.txt  README.md
examples/math/: CMakeLists.txt
examples/shader/: CMakeLists.txt  README.md
examples/sound/: CMakeLists.txt  README.md
examples/strings/: CMakeLists.txt
examples/templates/: CMakeLists.txt
examples/threads/: CMakeLists.txt
examples/tvOS/: CMakeLists.txt
examples/video/: CMakeLists.txt  README.md
examples/windowing/: CMakeLists.txt
libs/: .gitignore  .project  CreEPS.cpp  Makefile.am  _Licence.txt  readme
libs/audiodecoder/: buildnotes.txt
libs/glu/: glu.h
libs/glut/: glut.h
libs/gstappsink/: .cproject  .project  gstappsink.c  makefile
libs/kiss/: Makefile.arm6vl  Makefile.armv6l
libs/openFrameworks/: .clang-format  .cproject  .project  CMakeLists.txt  Makefile  ofMain.h  ofSources.cmake  openFrameworks.cmake  openFrameworks.pc.in
libs/tess2/: Makefile.armv6l  Makefile.armv7l
tests/: .gitignore  CMakeLists.txt
tests/addons/: CMakeLists.txt
tests/events/: CMakeLists.txt
tests/graphics/: CMakeLists.txt
tests/io/: CMakeLists.txt
tests/math/: CMakeLists.txt
tests/types/: CMakeLists.txt
tests/utils/: CMakeLists.txt
(+10256 files in other folders)
