SUBDIRS = libs \
	  addons/ofx3DModelLoader/src \
	  addons/ofxAccelerometer/src \
	  addons/ofxDirList/src \
	  addons/ofxFbo/src \
	  addons/ofxNetwork/src \
	  addons/ofxOpenCv/src \
	  addons/ofxOsc/src \
	  addons/ofxShader/src \
	  addons/ofxThread/src \
	  addons/ofxVectorGraphics \
	  addons/ofxVectorMath/src \
	  addons/ofxXmlSettings
